<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_rgbd</name>
  <version>0.1.0</version>
  <description>ROS2 Realsense publish rgb-d image packages</description>
  <maintainer email="fumiya.sato.rop@gmail.com">Fumiya Sato</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>librealsense2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realsense_camera_msgs</build_depend>
  <build_depend>vision_detection_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>librealsense2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realsense_camera_msgs</exec_depend>
  <exec_depend>vision_detection_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_components</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
